add content to test out spacing adjustments
make space under button match space under input

remove some of the custom negative margin from some headings following a p

simplifty spacing variables file; make shallow strip match $spv-outer--scaleable

fixes to the heading icon pattern; remove unused map

update icon sizes map to remove duplicates; make matrix icon same size as small heading icon

correct variable use

move margin-bottom out of the pdding placeholder as it is unrelated

remove obsolete rules

make fix helper text position independent of density multiplier

experimental: make text spacing depend on density multiplier

fix shrinking image in ff

fix tick element focus state to wrap tick / radio only, not text

remove matrix overrides

use correct var

adjust spacing under p

fine-tune position of focus outline on tick elements

fix ci errors

move &+& into placeholder so selectors extending %paragraph can benefit from it

refactor conditional to affect variable, in case it is used elsehere

fix spacing of media objects

adjust spacing of  u-nop-margin--bottom applied to typography to avoid overlap; apply to matrix

better align icon with matrix title

fix error

--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -9,7 +9,6 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
 
   // Used in buttons, inputs
   %bordered-text-vertical-padding {
-    margin-bottom: $input-margin-bottom;
     padding-bottom: calc(#{$spv-nudge} - 1px);
     padding-top: calc(#{$spv-nudge} - 1px);
   }
@@ -34,6 +33,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     font-size: 1rem;
     font-weight: 300;
     line-height: map-get($line-heights, default-text);
+    margin-bottom: $input-margin-bottom;
     min-width: 10em;
     padding-left: $sph-inner--small;
     padding-right: $sph-inner--small;
@@ -92,7 +92,8 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
 
       &::before,
       &::after {
-        @include vf-animation(all, brisk);
+        $properties: #{background-color, border-color};
+        @include vf-animation($properties);
         position: absolute;
       }
 
@@ -102,6 +103,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
         content: '';
         height: $box-size;
         left: 0;
+        outline-offset: 1px;
         top: $box-offset-top;
         width: $box-size;
       }
@@ -128,7 +130,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
       opacity: 1;
     }
 
-    &:focus + label {
+    &:focus + label::before {
       outline: 2px solid $color-focus;
     }
 
@@ -202,6 +204,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
   [type='file'] {
     @extend %bordered-text-vertical-padding;
     @include vf-focus;
+    margin-bottom: $input-margin-bottom;
     width: 100%;
   }
 
