--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -75,7 +75,7 @@
   }
 
   .p-card__thumbnail {
-    max-height: map-get($icon-sizes, thumb--card);
+    max-height: map-get($icon-sizes, heading-icon--small);
   }
 
   [class*='p-card'] {
