--- a/scss/_patterns_code-copyable.scss
+++ b/scss/_patterns_code-copyable.scss
@@ -10,6 +10,7 @@ $cc-button-size: 36px;
     @extend %vf-has-round-corners;
     @extend %vf-is-bordered;
     display: flex;
+    margin-bottom: $input-margin-bottom;
     overflow: hidden;
     position: relative;
 
