--- a/scss/_patterns_form-help-text.scss
+++ b/scss/_patterns_form-help-text.scss
@@ -4,6 +4,6 @@
   .p-form-help-text {
     @extend %small-text;
     color: $color-mid-dark;
-    margin-top: -$sp-unit;
+    margin-top: $sp-unit * 2 - $spv-outer--scaleable; // negate the effect of scaling, as we don't want helper text position to change when the density multiplier changes
   }
 }
