--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -1,7 +1,7 @@
 @import 'settings';
 
 $default-icon-size: map-get($icon-sizes, default);
-$social-icon-size: map-get($icon-sizes, social);
+$social-icon-size: map-get($icon-sizes, heading-icon--small);
 $color-social-icon-background: $color-mid-dark !default;
 $color-social-icon-foreground: $color-mid-x-light !default;
 
