--- a/scss/_patterns_inline-images.scss
+++ b/scss/_patterns_inline-images.scss
@@ -24,7 +24,7 @@
   }
 
   .p-inline-images__logo {
-    max-height: map-get($icon-sizes, thumb--small);
+    max-height: map-get($icon-sizes, thumb);
     max-width: 7rem;
     width: auto;
 
