--- a/scss/_patterns_media-object.scss
+++ b/scss/_patterns_media-object.scss
@@ -47,6 +47,7 @@
 
   .p-media-object__title {
     @extend %vf-heading-4;
+    @extend %u-no-margin--bottom--h4;
   }
 
   .p-media-object__meta-list {
@@ -88,6 +89,7 @@
 
     .p-media-object__title {
       @extend %vf-heading-1;
+      @extend %u-no-margin--bottom--h1;
     }
   }
 }
