--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -18,7 +18,7 @@
     font-size: 1rem;
     font-weight: 300;
     line-height: map-get($line-heights, default-text);
-    margin: 0 0 $spv-outer--scaleable + 2 * $spv-nudge-compensation 0;
+    margin: 0 0 $spv-outer--scaleable - (2 * $spv-nudge) 0;
     padding: calc(#{$spv-nudge} - 1px) $sph-inner--small * 1.5;
     text-align: center;
     text-decoration: none;
