--- a/scss/_base_placeholders-margin-collapse.scss
+++ b/scss/_base_placeholders-margin-collapse.scss
@@ -1,5 +1,9 @@
 @import 'settings';
 
+// @function smallestPositivePnumber($value) {
+//   return min(max($sp-unit, $value - ));
+// }
+
 %u-no-margin--bottom {
   &:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(p):not(small):not([class*='p-heading']) {
     margin-bottom: 0 !important;
@@ -34,7 +38,7 @@
 
 %u-no-margin--bottom--h3 {
   @media (max-width: $breakpoint-heading-threshold) {
-    margin-bottom: -#{map-get($nudges, nudge--h3-mobile)} !important;
+    margin-bottom: #{$sp-unit - map-get($nudges, nudge--h3-mobile)} !important;
   }
 
   @media (min-width: $breakpoint-heading-threshold) {
@@ -44,7 +48,7 @@
 
 %u-no-margin--bottom--h4 {
   @media (max-width: $breakpoint-heading-threshold) {
-    margin-bottom: -#{map-get($nudges, nudge--h4-mobile)} !important;
+    margin-bottom: #{$sp-unit - map-get($nudges, nudge--h4-mobile)} !important;
   }
 
   @media (min-width: $breakpoint-heading-threshold) {
@@ -59,7 +63,7 @@
 }
 
 %u-no-margin--bottom--default-text {
-  margin-bottom: $sp-unit - map-get($nudges, nudge--p) !important;
+  margin-bottom: #{$sp-unit - map-get($nudges, nudge--p)} !important;
 }
 
 %u-no-margin--bottom--small {
