--- a/scss/_patterns_form-validation.scss
+++ b/scss/_patterns_form-validation.scss
@@ -19,7 +19,7 @@
 
   .p-form-validation__message {
     @extend %small-text;
-    margin-top: -$sp-unit;
+    margin-top: $sp-unit * 2 - $spv-outer--scaleable; // negate the effect of scaling, as we don't want helper text position to change when the density multiplier changes
   }
 
   .p-form-validation__icon {
