--- a/scss/_patterns_heading-icon.scss
+++ b/scss/_patterns_heading-icon.scss
@@ -11,9 +11,6 @@
 
   .p-heading-icon__header {
     display: flex;
-    // Match adjustment of margin-top on paragraphs that are following a heading.
-    // Necessary because in this pattern the heading and paragraph are not in the same parent, so h3 + p rules do not apply
-    margin-bottom: $spv-p-after-heading-adjustment;
 
     &.is-stacked {
       display: inherit;
@@ -23,17 +20,17 @@
   .p-heading-icon__img {
     flex-shrink: 0;
     height: map-get($icon-sizes, heading-icon--small);
-    margin-bottom: $spv-inner--small;
+    margin-bottom: 0;
     margin-right: $sph-inner;
     width: map-get($icon-sizes, heading-icon--small);
 
     @media (max-width: $breakpoint-medium) {
-      margin-top: 0;
+      margin-top: map-get($nudges, nudge--h3-mobile);
     }
 
     @media (min-width: $breakpoint-medium) {
       height: map-get($icon-sizes, heading-icon);
-      margin-top: -#{$spv-inner--small};
+      margin-top: map-get($nudges, nudge--h3);
       width: map-get($icon-sizes, heading-icon);
     }
   }
