--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -36,7 +36,7 @@
       @extend %vf-pseudo-border--bottom;
       display: flex;
       font-size: 0;
-      margin: 0 auto $spv-inner--scaleable;
+      margin: 0 auto $spv-outer--scaleable;
       overflow-x: auto;
       padding: 0;
       position: relative;
