--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -147,7 +147,7 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/breakpoint-settings/' %}is-active{% endif %}" href="/settings/breakpoint-settings/">Breakpoints</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/color-settings/' %}is-active{% endif %}" href="/settings/color-settings/">Color</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/font-settings/' %}is-active{% endif %}" href="/settings/font-settings/">Font</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/layout-settings/' %}is-active{% endif %}" href="/settings/layout-settings/">Structure</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/layout-settings/' %}is-active{% endif %}" href="/settings/layout-settings/">Layout</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/placeholder-settings/' %}is-active{% endif %}" href="/settings/placeholder-settings/">Placeholders</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/spacing-settings/' %}is-active{% endif %}" href="/settings/spacing-settings/">Spacing</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/table-layout/' %}is-active{% endif %}" href="/settings/table-layout/">Table layout</a></li>
@@ -219,7 +219,7 @@
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/slider/' %}is-active{% endif %}" href="/patterns/slider/">Slider</a></li>
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/strip/' %}is-active{% endif %}" href="/patterns/strip/">Strip</a></li>
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/spacing-settings/' %}is-active{% endif %}" href="/settings/spacing-settings/">Spacing</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/layout-settings/' %}is-active{% endif %}" href="/settings/layout-settings/">Structure</a></li>
+              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/layout-settings/' %}is-active{% endif %}" href="/settings/layout-settings/">Layout</a></li>
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/switch/' %}is-active{% endif %}" href="/patterns/switch/">Switch</a></li>
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/table-of-contents/' %}is-active{% endif %}" href="/patterns/table-of-contents/">Table of contents</a></li>
               <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/table-layout/' %}is-active{% endif %}" href="/settings/table-layout/">Table layout</a></li>
