update nav to use #333

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -229,7 +229,7 @@ $nav-border-bottom-thickness: 1px;
   }
 
   %p-navigation--dark-theme {
-    background-color: map-get($colors--dark-theme, background);
+    background-color: map-get($colors--dark-theme, background-highlighted);
 
     .p-navigation__link > a,
     .p-navigation__toggle--close,
