--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -43,15 +43,14 @@ $colors--light-theme: (
   text-hover: #757575,
   text-disabled: #666,
   text-default: #111
-);
+) !default;
 
 //text-hover: minimum contrast on primary that satisfies contrast checker AA
 $colors--dark-theme: (
   background: hsl(0, 0%, 15%),
-  background-dark: hsl(0, 0%, 12%),
   background-highlighted: hsl(0, 0%, 17%),
   border-default: hsl(0, 0%, 27%),
   border-high-contrast: hsl(0, 0%, 42%),
   text-hover: hsl(0, 0%, 56%),
   text-default: hsl(0, 0%, 100%)
-);
+) !default;
