--- a/scss/_settings_system.scss
+++ b/scss/_settings_system.scss
@@ -1,2 +1,5 @@
 // Global system settings
-$app-version: '2.4.0' !default;
+
+// Deprecate configuration
+$app-version: '2.4.0';
+$deprecate-mode: sensible !default; // Override to "verbose" to get full deprecation notices for sass that you are importing
